added user auth and container list page

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "jwt-decode": "^3.1.2",
+    "material-ui-popup-state": "^1.7.1",
+    "mui-datatables": "^3.7.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
