--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "mui-datatables": "^3.7.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-json-view": "^1.21.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
