--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-json-view": "^1.21.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "reconnecting-websocket": "^4.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
