--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,14 +1,20 @@
+aiodocker==0.19.1
 aiofiles==0.5.0
+aiohttp==3.7.3
 alembic==1.5.4
 aniso8601==7.0.0
 async-exit-stack==1.0.1
 async-generator==1.10
+async-timeout==3.0.1
+attrs==20.3.0
+backcall==0.2.0
 bcrypt==3.2.0
 certifi==2020.12.5
 cffi==1.14.4
-chardet==4.0.0
+chardet==3.0.4
 click==7.1.1
 cryptography==3.3.1
+decorator==4.4.2
 dnspython==2.1.0
 docker==4.4.1
 ecdsa==0.14.1
@@ -21,17 +27,27 @@ gunicorn==20.0.4
 h11==0.9.0
 httptools==0.1.1
 idna==2.10
+ipython==7.20.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.18.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
+multidict==5.1.0
 orjson==3.4.7
+parso==0.8.1
 passlib==1.7.4
+pexpect==4.8.0
+pickleshare==0.7.5
 promise==2.3
+prompt-toolkit==3.0.16
 psycopg2==2.8.6
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pycparser==2.20
 pydantic==1.7.3
+Pygments==2.8.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-jose==3.2.0
@@ -43,9 +59,13 @@ Rx==1.6.1
 six==1.15.0
 SQLAlchemy==1.3.23
 starlette==0.13.6
+traitlets==5.0.5
+typing-extensions==3.7.4.3
 ujson==3.2.0
 urllib3==1.26.3
 uvicorn==0.11.8
 uvloop==0.14.0
+wcwidth==0.2.5
 websocket-client==0.57.0
 websockets==8.1
+yarl==1.6.3
