updated scroll behaviour and nginx conf for dev

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,24 +29,24 @@ services:
       - .env
     restart: on-failure:3
 
-  ws-api:
-    container_name: di-dev-ws-api
-    build:
-      context: server/.
-      dockerfile: Dockerfile.dev
-    ports:
-      - 8002:80
-    volumes:
-      - ./server:/app
-      - /var/run/docker.sock:/var/run/docker.sock
+  # ws-api:
+  #   container_name: di-dev-ws-api
+  #   build:
+  #     context: server/.
+  #     dockerfile: Dockerfile.dev
+  #   ports:
+  #     - 8002:80
+  #   volumes:
+  #     - ./server:/app
+  #     - /var/run/docker.sock:/var/run/docker.sock
 
-    stdin_open: true
-    tty: true
-    depends_on:
-      - database
-    env_file:
-      - .env
-    restart: on-failure:3
+  #   stdin_open: true
+  #   tty: true
+  #   depends_on:
+  #     - database
+  #   env_file:
+  #     - .env
+  #   restart: on-failure:3
 
   database:
     container_name: di-dev-db
