--- a/proxy/dev.conf
+++ b/proxy/dev.conf
@@ -2,9 +2,9 @@ upstream api {
     server api:80;
 }
 
-upstream ws-api {
-    server ws-api:80;
-}
+# upstream ws-api {
+#     server ws-api:80;
+# }
 
 upstream client {
     server client:3000;
@@ -35,24 +35,30 @@ server {
         proxy_buffering off;
         rewrite /api/(.*) /$1 break;
         proxy_pass http://api;
-    }
-
-
-    location /ws/api {
+        
         # enable WebSockets
-        rewrite /ws/api/(.*) /$1 break;
-        proxy_pass http://ws-api;
-
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Host $server_name;
-
     }
+
+
+    # location /ws/api {
+    #     # enable WebSockets
+    #     rewrite /ws/api/(.*) /$1 break;
+    #     proxy_pass http://ws-api;
+
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "upgrade";
+
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Host $server_name;
+
+    # }
 
 
 }
