--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "reconnecting-websocket": "^4.4.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xterm-addon-fit": "^0.5.0",
+    "xterm-for-react": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
