--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   proxy:
-    container_name: di-dev-proxy
+    container_name: di-proxy
     build:
       context: proxy/.
       dockerfile: Dockerfile.dev
@@ -11,7 +11,7 @@ services:
     restart: on-failure:3
 
   api:
-    container_name: di-dev-api
+    container_name: di-api
     build:
       context: server/.
       dockerfile: Dockerfile.dev
@@ -49,7 +49,7 @@ services:
   #   restart: on-failure:3
 
   database:
-    container_name: di-dev-db
+    container_name: di-db
     build: database/.
     volumes:
       - ./database/db_data:/var/lib/postgresql
@@ -58,7 +58,7 @@ services:
     restart: on-failure:3
 
   client:
-    container_name: di-dev-ui
+    container_name: di-ui
     build:
       context: client/.
       dockerfile: Dockerfile.dev
