--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -49,6 +49,7 @@ pycparser==2.20
 pydantic==1.7.3
 Pygments==2.8.0
 python-dateutil==2.8.1
+python-dotenv==0.15.0
 python-editor==1.0.4
 python-jose==3.2.0
 python-multipart==0.0.5
@@ -60,11 +61,13 @@ six==1.15.0
 SQLAlchemy==1.3.23
 starlette==0.13.6
 traitlets==5.0.5
+typer==0.3.2
 typing-extensions==3.7.4.3
 ujson==3.2.0
 urllib3==1.26.3
 uvicorn==0.11.8
 uvloop==0.14.0
+watchgod==0.6
 wcwidth==0.2.5
 websocket-client==0.57.0
 websockets==8.1
